tsr-docusign/main/default/objects/Docusign_Field_Mappings__c/Docusign_Field_Mappings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Docusign Field Mappings</label>
</CustomObject>