tsr-docusign/main/default/objects/Docusign_Field_Mappings__c/fields/Sobject_Type__c.field-meta.xml
<CustomField>
    <fullName>Sobject_Type__c</fullName>
    <label>Sobject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>