tsr-docusign/main/default/objects/Docusign_Field_Mappings__c/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <label>Source Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>